build(tsconfig): добавил options declaration

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,7 @@
     "esModuleInterop": true, // есть пакеты написанные на commonjs, благодаря эту бойлерплейту вокруг commonjs, мы можем использовать синтаксис es6
     "alwaysStrict": true, // добавляет в каждый файл use strict
     "forceConsistentCasingInFileNames": true, // компилятор становиться регистрочувствительным к импортам, нельзя будет писать как захочеться
-    // "declaration": true, // обычно нужно когда кто-то будет пользоваться твоим пакетом, автоматом подтянуться тайпинги
+    "declaration": true, // обычно нужно когда кто-то будет пользоваться твоим пакетом, автоматом подтянуться тайпинги
     // "declarationDir": "./dist/types", // группируем все типы в отдельной папки
     "resolveJsonModule": true, // можем импортировать json файлы import json from './example.json'
     "allowJs": true, // lкомпилятор будет собираться ts и js, очень удобно когда мы портируем проект
